# llm-rag-healthcare

./: LICENSE  README-dataloader.md  README.md  complete-llm-rag.py  data-generator.py  data-loader-pipeline.py  llm-rag-cli.py  pyproject.toml  urology-patient-data-additional.csv  urology_patient_data.csv
chroma_db/: chroma.sqlite3
chroma_db_backup_1744518683/: chroma.sqlite3
chroma_db_backup_1744519957/: chroma.sqlite3
chroma_db_backup_1744520032/: chroma.sqlite3
chroma_db_backup_1744520658/: chroma.sqlite3
